--- a/index.html
+++ b/index.html
@@ -12,8 +12,54 @@
     <main id="main">
       <h1 id="title">Dr. Nabeel</h1>
       <div id="img-div">
-        <img id="image" src="" alt="" />
+        <img id="image" src="https://cdn.pixabay.com/photo/2015/01/08/18/29/entrepreneur-593358_960_720.jpg" alt="Dr.Nabeel sitting" />
+        <figcaption id="img-caption">
+
+        </figcaption>
       </div>
+      <section id="tribute-info">
+    <h3>
+      Here's a timeline of Dr. Nabeel's life
+    </h3>
+    <ul>
+      <li>
+        <strong>1983</strong>
+        Born in Lahore Pakistan
+      </li>
+      <li>
+        <strong>1983</strong>
+        Born in Lahore Pakistan
+      </li>
+      <li>
+        <strong>1983</strong>
+        Born in Lahore Pakistan
+      </li>
+      <li>
+        <strong>1983</strong>
+        Born in Lahore Pakistan
+      </li>
+      <li>
+        <strong>1983</strong>
+        Born in Lahore Pakistan
+      </li>
+      <li>
+        <strong>1983</strong>
+        Born in Lahore Pakistan
+      </li>
+      <li>
+        <strong>1983</strong>
+        Born in Lahore Pakistan
+      </li>
+      <li>
+        <strong>1983</strong>
+        Born in Lahore Pakistan
+      </li>
+    </ul>
+      </section>
+      <button>
+
+        <a id="tribute-link" href="" #target="_blank">see more info</a>
+      </button>
     </main>
     <script src="js/index.js"></script>
   </body>
